--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: test
 on: push
 jobs: 
   test:
-    runs-on: ubunts-latest
+    runs-on: ubunts-20.04
     steps:
     - uses: actions/checkout@v3
     - name: All test
